tests/relative_resource_files/relative_resource_files.exp
Error ----------------------------------------------------------------------------------------------------- main.js:4:22

Cannot resolve module `./d3.css`. [cannot-resolve-module]

   4| var d3_css = require('./d3.css'); // error - missing resource file
                           ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- main.js:5:22

Cannot resolve module `./d3.mov`. [cannot-resolve-module]

   5| var d3_mov = require('./d3.mov'); // error - existing non-resource file
                           ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- main.js:6:22

Cannot resolve module `./d3.tar`. [cannot-resolve-module]

   6| var d3_tar = require('./d3.tar'); // error - missing non-resource file
                           ^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ main.js:8:2

Cannot cast `d3_svg.x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   main.js:8:2
   8| (d3_svg.x: string); // error number ~> string
       ^^^^^^^^

References:
   d3.svg.js:3:18
   3| export const x = 1;
                       ^ [1]
   main.js:8:12
   8| (d3_svg.x: string); // error number ~> string
                 ^^^^^^ [2]



Found 4 errors
